--- a/src/app/pages/cotizador/cotizador.component.html
+++ b/src/app/pages/cotizador/cotizador.component.html
@@ -275,9 +275,9 @@
                     <dxi-item dataField="idUnidadNegocio" editorType="dxSelectBox" [editorOptions]="{
               items: arrUnidadesNegocio,
               searchEnabled: true,
-              displayExpr: 'nombre',
+              displayExpr: 'ciudad',
               valueExpr: 'idUnidad'
-            }" [colSpan]="4">
+            }" [colSpan]="3">
                         <dxo-label text="Unidad de Negocio"> </dxo-label>
                         <dxi-validation-rule type="required" message="Unidad de Negocio es campo requerido"></dxi-validation-rule>
                     </dxi-item>
@@ -287,18 +287,11 @@
               searchEnabled: true,
               displayExpr: 'operacion',
               valueExpr: 'idTipoOperacion'
-            }" [colSpan]="4">
+            }" [colSpan]="3">
                         <dxo-label text="Tipo de Operación"> </dxo-label>
                         <dxi-validation-rule type="required" message="Tipo de Operación es campo requerido"></dxi-validation-rule>
                     </dxi-item>
-                    <!-- CLASIFICACION -->
-                    <dxi-item dataField="clasificacion" editorType="dxSelectBox" [editorOptions]="{
-              items: arrClasificaciones,
-              searchEnabled: true
-            }" [colSpan]="4">
-                        <dxo-label text="Clasificación"> </dxo-label>
-                        <dxi-validation-rule type="required" message="Clasificación es campo requerido"></dxi-validation-rule>
-                    </dxi-item>
+
 
                     <!-- CLIENTE -->
                     <dxi-item dataField="cliente" [colSpan]="6">
@@ -314,12 +307,16 @@
                     </dxi-item>
 
                     <!-- DIESEL -->
-                    <dxi-item itemtype="dxNumberBox" dataField="diesel" [colSpan]="2" [editorOptions]="{ onValueChanged: dieselValueChanged }">
+                    <dxi-item itemtype="dxNumberBox" dataField="diesel" [colSpan]="3" [editorOptions]="{ onValueChanged: dieselValueChanged }">
                         <dxo-label text="Diésel con Impuestos (MXN/Lt.)"> </dxo-label>
                         <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
                     </dxi-item>
-                    <!-- ESPACIO EN BLANCO -->
-                    <dxi-item itemType="empty" [colSpan]="10"></dxi-item>
+                    <!-- DIESEL -->
+                    <dxi-item itemtype="dxNumberBox" dataField="diesel" [colSpan]="3" [editorOptions]="{ onValueChanged: dieselValueChanged }">
+                        <dxo-label text="Diésel sin Impuestos (MXN/Lt.)"> </dxo-label>
+                        <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
+                    </dxi-item>
+
 
                     <dxi-item itemType="group" [colSpan]="12" [colCount]="10" caption="VIAJE IDA">
                         <!-- DISTANCIA IDA -->
@@ -389,19 +386,33 @@
                     </dxi-item>
                     <!-- ESPACIO EN BLANCO -->
                     <dxi-item itemType="empty" [colSpan]="12"></dxi-item>
-                    <!-- ESPACIO EN BLANCO -->
-                    <dxi-item itemType="empty" [colSpan]="6"></dxi-item>
 
-                    <!-- COSTO TOTAL -->
-                    <dxi-item itemtype="dxNumberBox" dataField="tarifa" [colSpan]="3" [editorOptions]="{ format: '$ #,##0.##', readOnly: true }">
-                        <dxo-label text="COSTO DE OPERACION" style="font-weight: bold !important">
-                        </dxo-label>
+                    <dxi-item itemType="group" [colSpan]="12" [colCount]="10">
+                        <dxi-item itemType="empty" [colSpan]="6"></dxi-item>
+                        <!-- PRECIO VENTA TONELADA -->
+                        <dxi-item itemtype="dxNumberBox" dataField="tarifaFinal" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##' }">
+                            <dxo-label text="TONELADAS" style="font-weight: bold !important">
+                            </dxo-label>
+                        </dxi-item>
+                        <!-- PRECIO VENTA TONELADA -->
+                        <dxi-item itemtype="dxNumberBox" dataField="tarifaFinal" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##' }">
+                            <dxo-label text="PRECIO DE X TONELADA" style="font-weight: bold !important">
+                            </dxo-label>
+                        </dxi-item>
+                        <dxi-item itemType="empty" [colSpan]="6"></dxi-item>
+                        <!-- COSTO TOTAL -->
+                        <dxi-item itemtype="dxNumberBox" dataField="tarifa" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##', readOnly: true }">
+                            <dxo-label text="COSTO DE OPERACION" style="font-weight: bold !important">
+                            </dxo-label>
+                        </dxi-item>
+
+                        <!-- PRECIO VENTA FINAL -->
+                        <dxi-item itemtype="dxNumberBox" dataField="tarifaFinal" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##' }">
+                            <dxo-label text="PRECIO DE VENTA FINAL" style="font-weight: bold !important">
+                            </dxo-label>
+                        </dxi-item>
                     </dxi-item>
-                    <!-- PRECIO VENTA FINAL -->
-                    <dxi-item itemtype="dxNumberBox" dataField="tarifaFinal" [colSpan]="3" [editorOptions]="{ format: '$ #,##0.##' }">
-                        <dxo-label text="PRECIO DE VENTA FINAL" style="font-weight: bold !important">
-                        </dxo-label>
-                    </dxi-item>
+
 
                     <!-- ESPACIO EN BLANCO -->
                     <dxi-item itemType="empty" [colSpan]="12"></dxi-item>
