cambios cotizador pdf y tipo operacion

--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -28,18 +28,18 @@
                     <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
                     <dxo-export [enabled]="true"></dxo-export>
                     <dxi-column dataField="tipoOperacion" caption="Operación" width="100" cellTemplate="cellTemplateSize" [fixed]="true"></dxi-column>
-                    <dxi-column dataField="enero" caption="Enero" format="currency"></dxi-column>
-                    <dxi-column dataField="febrero" caption="Febrero" format="currency"></dxi-column>
-                    <dxi-column dataField="marzo" caption="Marzo" format="currency"></dxi-column>
-                    <dxi-column dataField="abril" caption="Abril" format="currency"></dxi-column>
-                    <dxi-column dataField="mayo" caption="Mayo" format="currency"></dxi-column>
-                    <dxi-column dataField="junio" caption="Junio" format="currency"></dxi-column>
-                    <dxi-column dataField="julio" caption="Julio" format="currency"></dxi-column>
-                    <dxi-column dataField="agosto" caption="Agosto" format="currency"></dxi-column>
-                    <dxi-column dataField="septiembre" caption="Septiembre" format="currency"></dxi-column>
-                    <dxi-column dataField="octubre" caption="Octubre" format="currency"></dxi-column>
-                    <dxi-column dataField="noviembre" caption="Noviembre" format="currency"></dxi-column>
-                    <dxi-column dataField="diciemnbre" caption="Diciembre" format="currency"></dxi-column>
+                    <dxi-column dataField="enero" caption="Enero" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="febrero" caption="Febrero" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="marzo" caption="Marzo" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="abril" caption="Abril" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="mayo" caption="Mayo" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="junio" caption="Junio" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="julio" caption="Julio" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="agosto" caption="Agosto" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="septiembre" caption="Septiembre" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="octubre" caption="Octubre" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="noviembre" caption="Noviembre" format="currency" width="100"></dxi-column>
+                    <dxi-column dataField="diciemnbre" caption="Diciembre" format="currency" width="100"></dxi-column>
                     <dxi-column dataField="unidadNegocio" caption="" [groupIndex]="0" [allowSorting]="false"></dxi-column>
 
                     <dxo-summary>
@@ -111,7 +111,7 @@
                     <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
                     <dxo-export [enabled]="true"></dxo-export>
                     <dxi-column dataField="tipoOperacion" caption="Operación" width="100" cellTemplate="cellTemplateSize" [fixed]="true"></dxi-column>
-                    <dxi-column dataField="enero" caption="Enero" format="fixedPoint"></dxi-column>
+                    <dxi-column dataField="enero" caption="Enero" format="fixedPoint" width="150"></dxi-column>
                     <dxi-column dataField="febrero" caption="Febrero" format="fixedPoint"></dxi-column>
                     <dxi-column dataField="marzo" caption="Marzo" format="fixedPoint"></dxi-column>
                     <dxi-column dataField="abril" caption="Abril" format="fixedPoint"></dxi-column>
