--- a/src/app/pages/cotizador/cotizador.component.html
+++ b/src/app/pages/cotizador/cotizador.component.html
@@ -150,7 +150,7 @@
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- DIESEL -->
-                <dxi-column dataField="diesel_total_sin_impuesto" caption="Diesel" alignment="right" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="diesel_total_sin_impuestos" caption="Diesel" alignment="right" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- COSTO POR KM -->
@@ -192,6 +192,11 @@
                 <!-- BOTON VER -->
                 <dxi-column caption="Ver" headerCellTemplate="headerTemplate" type="buttons" [width]="60">
                     <dxi-button hint="Ver Cotizacion" icon="find" [onClick]="verCortizacionClick"></dxi-button>
+                </dxi-column>
+
+                <!-- BOTON IMPRIMIR -->
+                <dxi-column caption="Imprimir" headerCellTemplate="headerTemplate" type="buttons" [width]="60">
+                    <dxi-button hint="Imprimir Cotización" icon="print" [onClick]="imprimirCortizacionClick"></dxi-button>
                 </dxi-column>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
@@ -282,22 +287,42 @@
                             <dxi-validation-rule type="required" message="Unidad de Negocio es campo requerido"></dxi-validation-rule>
                         </dxi-item>
                         <!-- TIPOS OPERACIONES -->
-                        <dxi-item dataField="id_tipo_operacion" editorType="dxSelectBox" [editorOptions]="{
+                        <dxi-item dataField="tipoOperacion" editorType="dxSelectBox" [editorOptions]="{
               items: arrTipoOperacion,
               searchEnabled: true,
               displayExpr: 'operacion',
-              valueExpr: 'idTipoOperacion'
+              valueExpr: 'operacion',
+              onValueChanged: tipoOperacion_ValueChanged
               
             }" [colSpan]="3">
                             <dxo-label text="Tipo de Operación"> </dxo-label>
                             <dxi-validation-rule type="required" message="Tipo de Operación es campo requerido"></dxi-validation-rule>
                         </dxi-item>
 
+                        <!-- RENDIMIENTO CARGADO -->
+                        <dxi-item itemtype="dxNumberBox" dataField="rend_cargado" [colSpan]="1">
+                            <dxo-label text="RendCargado "> </dxo-label>
+                        </dxi-item>
+                        <!-- RENDIMIENTO VACIO -->
+                        <dxi-item itemtype="dxNumberBox" dataField="rend_vacio" [colSpan]="1">
+                            <dxo-label text="RendVacío "> </dxo-label>
+                        </dxi-item>
+                        <!-- DIESEL -->
+                        <dxi-item itemtype="dxNumberBox" dataField="diesel" [colSpan]="2" [editorOptions]="{ onValueChanged: dieselValueChanged, format: '$ #,##0.##' }">
+                            <dxo-label text="Diésel con Impuestos "> </dxo-label>
+                            <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
+                        </dxi-item>
+                        <!-- DIESEL SIN IMPUESTOS-->
+                        <dxi-item itemtype="dxNumberBox" dataField="diesel_sin_impuestos" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##', readOnly: true }">
+                            <dxo-label text="Diésel sin Impuestos "> </dxo-label>
+                            <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
+                        </dxi-item>
 
                         <!-- CLIENTE -->
                         <dxi-item dataField="cliente" [colSpan]="6">
                             <dxi-validation-rule type="required" message="Cliente es campo requerido"></dxi-validation-rule>
                         </dxi-item>
+
                         <!-- ORIGEN -->
                         <dxi-item dataField="origen" [colSpan]="3">
                             <dxi-validation-rule type="required" message="Origen es campo requerido"></dxi-validation-rule>
@@ -306,18 +331,6 @@
                         <dxi-item dataField="destino" [colSpan]="3">
                             <dxi-validation-rule type="required" message="Destino es campo requerido"></dxi-validation-rule>
                         </dxi-item>
-
-                        <!-- DIESEL -->
-                        <dxi-item itemtype="dxNumberBox" dataField="diesel" [colSpan]="3" [editorOptions]="{ onValueChanged: dieselValueChanged, format: '$ #,##0.##' }">
-                            <dxo-label text="Diésel con Impuestos (MXN/Lt.)"> </dxo-label>
-                            <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
-                        </dxi-item>
-                        <!-- DIESEL -->
-                        <dxi-item itemtype="dxNumberBox" dataField="diesel_sin_impuestos" [colSpan]="3" [editorOptions]="{ format: '$ #,##0.##', readOnly: true }">
-                            <dxo-label text="Diésel sin Impuestos (MXN/Lt.)"> </dxo-label>
-                            <dxi-validation-rule type="required" message="Distancia total es campo requerido"></dxi-validation-rule>
-                        </dxi-item>
-
 
                         <dxi-item itemType="group" [colSpan]="12" [colCount]="12" caption="VIAJE IDA">
                             <!-- DISTANCIA IDA -->
@@ -401,7 +414,7 @@
                         <dxi-item itemType="empty" [colSpan]="12"></dxi-item>
 
                         <dxi-item itemType="group" [colSpan]="12" [colCount]="10">
-                            <dxi-item itemType="empty" [colSpan]="6"></dxi-item>
+
                             <!-- PRECIO VENTA TONELADA -->
                             <dxi-item itemtype="dxNumberBox" dataField="toneladas" [colSpan]="2" [editorOptions]="{onValueChanged: toneladasTotalValueChanged}">
                                 <dxo-label text="Toneladas" style="font-weight: bold !important">
@@ -413,34 +426,41 @@
                                 </dxo-label>
                             </dxi-item>
                             <dxi-item itemType="empty" [colSpan]="6"></dxi-item>
+
+
+
                             <!-- COSTO TOTAL -->
                             <dxi-item itemtype="dxNumberBox" dataField="costoViaje" [colSpan]="2" [editorOptions]="{ format: '$ #,##0.##', readOnly: true }">
                                 <dxo-label text="COSTO DE OPERACION" style="font-weight: bold !important">
                                 </dxo-label>
                             </dxi-item>
-
                             <!-- PRECIO VENTA FINAL -->
                             <dxi-item itemtype="dxNumberBox" dataField="tarifaFinal" [colSpan]="2" [editorOptions]="{onValueChanged: precioTotalValueChanged, format: '$ #,##0.##' }">
                                 <dxo-label text="PRECIO DE VENTA FINAL" style="font-weight: bold !important">
                                 </dxo-label>
+                            </dxi-item>
+
+                            <!-- BOTON GUARDAR  -->
+                            <dxi-item style="margin-top: 2rem" itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptions" [colSpan]="2">
+                            </dxi-item>
+
+                            <!-- BOTON VER VARIABLES  -->
+                            <dxi-item itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptionsVariables" [colSpan]="2">
+                            </dxi-item>
+
+
+                            <!-- BOTON PREVISUALIZAR  -->
+                            <dxi-item style="color: green" itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptionsPre" [colSpan]="2">
                             </dxi-item>
                         </dxi-item>
 
 
                         <!-- ESPACIO EN BLANCO -->
                         <dxi-item itemType="empty" [colSpan]="12"></dxi-item>
-                        <!-- BOTON VER VARIABLES  -->
-                        <dxi-item itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptionsVariables" [colSpan]="3">
-                        </dxi-item>
-                        <!-- BOTON PREVISUALIZAR  -->
-                        <dxi-item style="color: green" itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptionsPre" [colSpan]="3">
-                        </dxi-item>
-                        <!-- BOTON IMPRIMIR  -->
-                        <dxi-item style="color: green" itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptionsImprimir" [colSpan]="3">
-                        </dxi-item>
-                        <!-- BOTON GUARDAR  -->
-                        <dxi-item style="margin-top: 2rem" itemType="button" horizontalAlignment="center" [buttonOptions]="buttonOptions" [colSpan]="3">
-                        </dxi-item>
+
+
+
+
                     </dx-form>
                 </form>
             </dx-scroll-view>
