--- a/src/app/pages/ingresosAnuales/ingresos.component.html
+++ b/src/app/pages/ingresosAnuales/ingresos.component.html
@@ -106,7 +106,7 @@
 
                 </dx-data-grid>
             </dxi-item>
-            <dxi-item title="Kilómetros">
+            <!-- <dxi-item title="Kilómetros">
                 <dx-data-grid id="pivotgridKms" [dataSource]="kms" [showBorders]="true">
                     <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
                     <dxo-export [enabled]="true"></dxo-export>
@@ -268,7 +268,7 @@
                     </div>
 
                 </dx-data-grid>
-            </dxi-item>
+            </dxi-item> -->
         </dx-tab-panel>
     </div>
 
