--- a/src/app/pages/costos/costos.component.html
+++ b/src/app/pages/costos/costos.component.html
@@ -36,7 +36,7 @@
 
             <!-- CONTROLES DEL FORM -->
             <!--#region :::: ROW 1 DEL FORM ::::  -->
-            <!--ROW 1 Unidad de Negocio -->
+            <!--ROW 1 Consulta -->
             <dxi-item>
                 <dxi-location screen="md lg" [row]="0" [col]="0"></dxi-location>
                 <dxi-location style="margin-top: 1rem" screen="xs sm" [row]="0" [col]="0" [colspan]="12"></dxi-location>
@@ -47,8 +47,6 @@
                 <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="1" [col]="0" [colspan]="12"></dxi-location>
                 <dx-select-box [items]="arrAnos" displayExpr="anio" valueExpr="idAnio" (onValueChanged)="seleccionarAnio($event)"></dx-select-box>
             </dxi-item>
-
-            <!-- ROW 1 TIPO OPERACION -->
             <dxi-item>
                 <dxi-location screen="md lg" [row]="0" [col]="5"></dxi-location>
                 <dxi-location style="margin-top: 1rem" screen="xs sm" [row]="2" [col]="0" [colspan]="12"></dxi-location>
@@ -60,12 +58,6 @@
                 <dx-select-box [items]="arrMeses" displayExpr="nombre" valueExpr="idMes" (onValueChanged)="seleccionarMes($event)">
                 </dx-select-box>
             </dxi-item>
-            <!--#endregion :::: FIN ROW 1 ::::  -->
-
-
-
-
-            <!-- CONSULTAR DATOS -->
             <dxi-item>
                 <dxi-location screen="md lg" [row]="0" [col]="10" [colspan]="2"></dxi-location>
                 <dxi-location style="margin-top: 1.4rem" screen="xs sm" [row]="12" [col]="0" [colspan]="12"></dxi-location>
@@ -74,30 +66,97 @@
                     </dx-button>
                 </div>
             </dxi-item>
+            <!--#endregion :::: FIN ROW 1 ::::  -->
+
+            <!--ROW 2 Datos -->
+            <dxi-item>
+                <dxi-location screen="md lg" [row]="1" [col]="0" [colspan]="3"></dxi-location>
+                <dxi-location style="margin-top: 1.4rem" screen="xs sm" [row]="13" [col]="0" [colspan]="12"></dxi-location>
+                <div style="font-weight: bolder; margin-bottom: 10px">
+                    Día del mes:
+                    <span class="badge-rg">{{ diaMes}}</span>
+                </div>
+            </dxi-item>
+            <dxi-item>
+                <dxi-location screen="md lg" [row]="1" [col]="4" [colspan]="3"></dxi-location>
+                <dxi-location style="margin-top: 1.4rem" screen="xs sm" [row]="13" [col]="0" [colspan]="12"></dxi-location>
+                <div style="font-weight: bolder; margin-bottom: 10px">
+                    Días totales:
+                    <span class="badge-rg">{{ diasTotales }}</span>
+                </div>
+            </dxi-item>
+            <dxi-item>
+                <dxi-location screen="md lg" [row]="1" [col]="7" [colspan]="3"></dxi-location>
+                <dxi-location style="margin-top: 1.4rem" screen="xs sm" [row]="13" [col]="0" [colspan]="12"></dxi-location>
+                <div style="font-weight: bolder; margin-bottom: 10px">
+                    Promedio:
+                    <span class="badge-rg">{{ promedio | percent }}</span>
+                </div>
+            </dxi-item>
+
+
+
+            <!--#endregion :::: FIN ROW 1 ::::  -->
 
 
         </dx-responsive-box>
 
         <!--#region :::: GRID ::::  -->
-        <dx-data-grid #rentGer id="gridContainer" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true">
-            <dxi-column dataField="ranking" caption="Ranking" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="unidaNegocio" caption="UDN" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="ruta" caption="Ruta" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="kms" caption="Kms." [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="tipoOperacion" caption="Tipo Operación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="cliente" caption="Cliente" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="viajes" caption="Liq." [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="rentabilidad" caption="Rentabilidad" alignment="right" [fixed]="true" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="rentabilidadMesAnt" caption="Rent. Mes Ant." alignment="right" [fixed]="true" format="percent" headerCellTemplate="headerTemplate"></dxi-column>
-            <dxi-column dataField="tendencia" caption="Tendencia" [fixed]="true" alignment="center" headerCellTemplate="headerTemplate" cellTemplate="diffCellTemplate"></dxi-column>
-            <dxi-column caption="Detalles" headerCellTemplate="headerTemplate" type="buttons" [width]="60">
-
+        <dx-data-grid #rentGer id="gridContainer" [dataSource]="arrCostos" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
+            <dxo-scrolling mode="virtual"></dxo-scrolling>
+            <dxo-grouping #expand [autoExpandAll]="true" [allowCollapsing]="false"></dxo-grouping>
+            <!-- <dxi-column dataField="udn" caption="UDN" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column> -->
+            <dxi-column dataField="udn" [groupIndex]="0"></dxi-column>
+            <!-- <dxi-column dataField="tipo" [groupIndex]="1"></dxi-column> -->
+            <dxi-column dataField="concepto" caption="Concepto" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column>
+            <dxi-column caption="Real" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="real" caption="$" format="currency" precision="2" headerCellTemplate="headerTemplate" [width]="120"></dxi-column>
+                <dxi-column dataField="porReal" caption="%" alignment="right" format="##0.#%" headerCellTemplate="headerTemplate" [width]="70"></dxi-column>
             </dxi-column>
-            <!-- Liquidcion 10 -->
-            <!-- <dxi-column [caption]="'L-' + liquidaciones.data[1].L10" alignment="center" [visible]="liquidaciones.data[0].L10v" headerCellTemplate="titleHeaderTemplate">
-            <dxi-column dataField="L10" caption="Liquidación" alignment="right"></dxi-column>
-            <dxi-column dataField="%L10" caption="%" alignment="center"></dxi-column>
-        </dxi-column> -->
+            <dxi-column caption="Presupuesto" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="presupuesto" caption="$" headerCellTemplate="headerTemplate" [width]="120" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="porPresupuesto" caption="%" alignment="right" format="##0.#%" headerCellTemplate="headerTemplate" [width]="70"></dxi-column>
+            </dxi-column>
+            <dxi-column caption="Desviación RealVSPrespuesto" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="desviacionDiaria" caption="$" headerCellTemplate="headerTemplate" [width]="120" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="porDesviacion" caption="%" alignment="right" format="##0.#%" precision="2" headerCellTemplate="headerTemplate" [width]="70"></dxi-column>
+            </dxi-column>
+            <dxi-column caption="Promedios Diarios" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="proyDiaria" caption="Real" headerCellTemplate="headerTemplate" [width]="100" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="promDiario" caption="Presupuesto" headerCellTemplate="headerTemplate" [width]="100" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="porAvanceDiario" caption="%" alignment="right" format="##0.#%" headerCellTemplate="headerTemplate" [width]="60"></dxi-column>
+            </dxi-column>
+
+            <dxi-column caption="Mensual" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="proyeccion" caption="Proyección" headerCellTemplate="headerTemplate" [width]="120" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="porProyeccion" caption="%" alignment="right" format="##0.#%" headerCellTemplate="headerTemplate" [width]="60"></dxi-column>
+                <dxi-column dataField="desviacionMensual" caption="Desviación" headerCellTemplate="headerTemplate" [width]="120" format="currency" precision="2"></dxi-column>
+                <dxi-column dataField="porDesviacionMensual" caption="% " alignment="right" format="##0.#%" headerCellTemplate="headerTemplate" [width]="70"></dxi-column>
+            </dxi-column>
+
+
+            <!-- <dxo-summary>
+
+                <dxi-total-item column="real" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###;-$ #,##0">
+                </dxi-total-item>
+                
+                <dxi-total-item column="presupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###;-$ #,##0">
+                </dxi-total-item>
+                <dxi-total-item column="porPresupuesto" summaryType="avg" displayFormat="{0}" valueFormat="percent">
+                </dxi-total-item> 
+
+
+                <dxi-group-item column="real" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###;-$ #,##0" [showInGroupFooter]="false" [alignByColumn]="true">
+                </dxi-group-item>
+                <dxi-group-item column="porReal" summaryType="sum" displayFormat="{0}" valueFormat="percent" [showInGroupFooter]="false" [alignByColumn]="true">
+                </dxi-group-item>
+                <dxi-group-item column="presupuesto" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###;-$ #,##0" [showInGroupFooter]="false" [alignByColumn]="true">
+                </dxi-group-item>
+                <dxi-group-item column="porPresupuesto" summaryType="sum" displayFormat="{0}" valueFormat="percent" [showInGroupFooter]="false" [alignByColumn]="true">
+                </dxi-group-item>
+
+
+            </dxo-summary> -->
 
             <div *dxTemplate="let data of 'headerTemplate'">
                 <div style="font-weight: bolder; color: black">
@@ -116,7 +175,7 @@
             </div>
 
             <dxo-export [enabled]="true"></dxo-export>
-            <dxo-paging [pageSize]="30"></dxo-paging>
+            <dxo-paging [pageSize]="100"></dxo-paging>
             <dxo-sorting mode="none"></dxo-sorting>
         </dx-data-grid>
         <!--#endregion :::: FIN GRID ::::  -->
