--- a/src/app/pages/costos-anuales/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales/costos-anuales.component.html
@@ -162,7 +162,7 @@
 <br><br><br>
 
 
-    <dx-data-grid #rentCont2 id="gridContainer2" [dataSource]="costosAnuales" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false" [columnAutoWidth]="true" [showBorders]="true"
+    <dx-data-grid #rentCont2 id="gridarrLiquidacionesDetalleContainer2" [dataSource]="costosAnuales" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false" [columnAutoWidth]="true" [showBorders]="true"
         (onRowPrepared)="onRowPrepared($event)" (onContentReady)="onContentReady($event)" (onCellPrepared)="onCellPrepared($event)">
 
         <dxi-column dataField="compania" caption="Compañia" [fixed]="true" headerCellTemplate="headerTemplate" [groupIndex]="0"></dxi-column>
